java media player addition for main menu